--- a/playground/index.html
+++ b/playground/index.html
@@ -11,7 +11,7 @@
     <title>Ruff Playground</title>
     <link
       rel="icon"
-      href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 100 100%22><text y=%22.9em%22 font-size=%2290%22>🛠️</text></svg>"
+      href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 100 100%22><text y=%22.9em%22 font-size=%2290%22>⚡</text></svg>"
     />
     <link rel="stylesheet" href="https://rsms.me/inter/inter.css" />
   </head>
